// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a default option 1`] = `
<li>
  <div
    className="button"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  >
    1st Option
  </div>
</li>
`;

exports[`Button renders a focused option 1`] = `
<li>
  <div
    className="button focus"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  >
    1st Option
  </div>
</li>
`;

exports[`Button renders an active and focused option 1`] = `
<li>
  <div
    className="button focus active"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  >
    1st Option
  </div>
</li>
`;

exports[`Button renders an active option 1`] = `
<li>
  <div
    className="button active"
    onClick={[Function]}
    role="button"
    tabIndex="-1"
  >
    1st Option
  </div>
</li>
`;
